--- a/NotraMuse/Base.lproj/Main.storyboard
+++ b/NotraMuse/Base.lproj/Main.storyboard
@@ -111,10 +111,10 @@
             </objects>
             <point key="canvasLocation" x="28.985507246376812" y="73.660714285714278"/>
         </scene>
-        <!--View Controller-->
+        <!--Test View Controller-->
         <scene sceneID="wOu-yF-Q68">
             <objects>
-                <viewController id="92O-FJ-uu8" sceneMemberID="viewController">
+                <viewController id="92O-FJ-uu8" customClass="TestViewController" customModule="NotraMuse" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YOg-P8-62w">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -136,7 +136,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6zI-lv-6lb">
-                                <rect key="frame" x="27" y="386" width="367" height="46"/>
+                                <rect key="frame" x="27" y="409" width="367" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="DXw-ZM-Psi"/>
                                     <constraint firstAttribute="width" constant="367" id="sUt-nI-GL6"/>
@@ -146,7 +146,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of Albums:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9wV-He-0Sk">
-                                <rect key="frame" x="20" y="615" width="360" height="28.666666666666629"/>
+                                <rect key="frame" x="20" y="638" width="360" height="28.666666666666629"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28.670000000000002" id="c58-Fg-55U"/>
                                     <constraint firstAttribute="width" constant="360" id="t47-Eh-2Wg"/>
@@ -156,7 +156,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of Fans: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Js-m1-kqL">
-                                <rect key="frame" x="20" y="481" width="374" height="51"/>
+                                <rect key="frame" x="20" y="504" width="374" height="51"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="6Xx-Gc-DMm"/>
                                     <constraint firstAttribute="height" constant="51" id="VbV-Vx-ZkA"/>
@@ -166,10 +166,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zAW-gR-mpb">
-                                <rect key="frame" x="20" y="123.99999999999999" width="374" height="240.66666666666669"/>
+                                <rect key="frame" x="20" y="124" width="374" height="263.66666666666669"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="244" id="Awu-0v-bjc"/>
-                                    <constraint firstAttribute="height" constant="244" id="YsY-GU-ove"/>
                                     <constraint firstAttribute="width" constant="374" id="sTp-pQ-vMl"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="u1K-hG-1kp"/>
                                 </constraints>
@@ -178,18 +177,18 @@
                         <viewLayoutGuide key="safeArea" id="uQa-tT-RsT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="uQa-tT-RsT" firstAttribute="bottom" secondItem="zAW-gR-mpb" secondAttribute="bottom" constant="473" id="0yN-ph-O6W"/>
                             <constraint firstItem="9wV-He-0Sk" firstAttribute="top" secondItem="5Js-m1-kqL" secondAttribute="bottom" constant="83" id="6TW-cN-u1S"/>
                             <constraint firstItem="zAW-gR-mpb" firstAttribute="leading" secondItem="uQa-tT-RsT" secondAttribute="leading" constant="20" id="7gD-tY-aWp"/>
                             <constraint firstItem="uQa-tT-RsT" firstAttribute="trailing" secondItem="zAW-gR-mpb" secondAttribute="trailing" constant="20" id="Apm-Wc-F9N"/>
                             <constraint firstItem="uQa-tT-RsT" firstAttribute="trailing" secondItem="9wV-He-0Sk" secondAttribute="trailing" constant="34" id="DUY-20-F0X"/>
-                            <constraint firstItem="zAW-gR-mpb" firstAttribute="top" secondItem="uQa-tT-RsT" secondAttribute="top" constant="78" id="Em1-2W-Rqz"/>
                             <constraint firstItem="5Js-m1-kqL" firstAttribute="leading" secondItem="uQa-tT-RsT" secondAttribute="leading" constant="20" id="KRD-Hi-j2v"/>
                             <constraint firstItem="zAW-gR-mpb" firstAttribute="leading" secondItem="uQa-tT-RsT" secondAttribute="leading" constant="20" id="QFp-JI-AWW"/>
                             <constraint firstItem="uQa-tT-RsT" firstAttribute="trailing" secondItem="5Js-m1-kqL" secondAttribute="trailing" constant="20" id="YVR-qG-1UO"/>
                             <constraint firstItem="5Js-m1-kqL" firstAttribute="top" secondItem="6zI-lv-6lb" secondAttribute="bottom" constant="49" id="a4Y-zb-nza"/>
                             <constraint firstItem="uQa-tT-RsT" firstAttribute="trailing" secondItem="6zI-lv-6lb" secondAttribute="trailing" constant="20" id="arw-KZ-vrK"/>
                             <constraint firstItem="6zI-lv-6lb" firstAttribute="top" secondItem="zAW-gR-mpb" secondAttribute="bottom" constant="20" id="eK0-Au-Cz5"/>
+                            <constraint firstItem="uQa-tT-RsT" firstAttribute="bottom" secondItem="9wV-He-0Sk" secondAttribute="bottom" constant="195.33333333333337" id="heM-wS-Gav"/>
+                            <constraint firstItem="zAW-gR-mpb" firstAttribute="top" secondItem="uQa-tT-RsT" secondAttribute="top" constant="78" id="j5L-bF-xJb"/>
                             <constraint firstItem="6zI-lv-6lb" firstAttribute="top" secondItem="zAW-gR-mpb" secondAttribute="bottom" constant="20" id="kxt-Ru-Cna"/>
                             <constraint firstItem="9wV-He-0Sk" firstAttribute="top" secondItem="5Js-m1-kqL" secondAttribute="bottom" constant="83" id="mHm-42-R9r"/>
                             <constraint firstItem="5Js-m1-kqL" firstAttribute="top" secondItem="6zI-lv-6lb" secondAttribute="bottom" constant="49" id="oTz-n3-gGo"/>
@@ -208,21 +207,58 @@
             </objects>
             <point key="canvasLocation" x="4046.376811594203" y="-214.95535714285714"/>
         </scene>
-        <!--View Controller-->
+        <!--Search-->
         <scene sceneID="S39-ff-E4x">
             <objects>
-                <viewController id="dNi-9M-c8z" sceneMemberID="viewController">
+                <viewController id="dNi-9M-c8z" customClass="SearchViewController" customModule="NotraMuse" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KHA-gU-j10">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="j6Q-ms-cIS">
+                                <rect key="frame" x="0.0" y="32" width="414" height="864"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchTableViewCell" rowHeight="145" id="16E-Ra-96j" customClass="SearchTableViewCell" customModule="NotraMuse" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="414" height="145"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="16E-Ra-96j" id="ZJg-X5-uym">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="145"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9NI-K0-WPI">
+                                                    <rect key="frame" x="25" y="25" width="389" height="85"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="9NI-K0-WPI" secondAttribute="trailing" id="5FL-iA-KlD"/>
+                                                <constraint firstItem="9NI-K0-WPI" firstAttribute="leading" secondItem="ZJg-X5-uym" secondAttribute="leading" constant="25" id="Eln-ja-nC8"/>
+                                                <constraint firstItem="9NI-K0-WPI" firstAttribute="top" secondItem="ZJg-X5-uym" secondAttribute="top" constant="25" id="MEg-1M-9Eo"/>
+                                                <constraint firstAttribute="bottom" secondItem="9NI-K0-WPI" secondAttribute="bottom" constant="35" id="bh0-nq-vcg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="songLabel" destination="9NI-K0-WPI" id="acJ-Uq-b2v"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="H7T-SQ-aCx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Dol-9W-t0L"/>
+                    <navigationItem key="navigationItem" title="Search" id="Dol-9W-t0L"/>
+                    <connections>
+                        <outlet property="tableview" destination="j6Q-ms-cIS" id="crZ-Yg-rAZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ijg-UV-Bnh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2450" y="1165"/>
+            <point key="canvasLocation" x="2449.275362318841" y="1163.1696428571429"/>
         </scene>
         <!--Home-->
         <scene sceneID="awf-KN-pZ7">
@@ -500,8 +536,8 @@
                         </imageReference>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vJr-X0-QPT">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="vJr-X0-QPT">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
