Update README file

--- a/NotraMuse/Base.lproj/LaunchScreen.storyboard
+++ b/NotraMuse/Base.lproj/LaunchScreen.storyboard
@@ -17,22 +17,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="LU1-Y6-Sqp">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="LU1-Y6-Sqp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6g9-iX-PFQ"/>
-                            <constraint firstItem="LU1-Y6-Sqp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="S9k-87-muA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LU1-Y6-Sqp" secondAttribute="trailing" id="beC-KI-hZK"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LU1-Y6-Sqp" secondAttribute="bottom" id="rVU-vm-EGC"/>
+                            <constraint firstItem="LU1-Y6-Sqp" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="2xL-Wv-GWa"/>
+                            <constraint firstAttribute="bottom" secondItem="LU1-Y6-Sqp" secondAttribute="bottom" id="3J1-VZ-Qe8"/>
+                            <constraint firstItem="LU1-Y6-Sqp" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cr9-uH-NDw"/>
+                            <constraint firstItem="LU1-Y6-Sqp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gmX-x1-g4R"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
