--- a/NotraMuse/Base.lproj/Main.storyboard
+++ b/NotraMuse/Base.lproj/Main.storyboard
@@ -549,6 +549,7 @@
                                                                 <outlet property="ItemTitleLabel" destination="tPZ-M6-K6L" id="LvW-Ne-7aR"/>
                                                                 <outlet property="itemImage" destination="47S-d9-mQx" id="2RD-Qd-24F"/>
                                                                 <outlet property="itemTitleLabel" destination="5nB-4A-LlY" id="vW2-Cr-BEh"/>
+                                                                <segue destination="fy6-yO-LSO" kind="show" id="Uv3-K3-fzw"/>
                                                             </connections>
                                                         </collectionViewCell>
                                                     </cells>
@@ -576,7 +577,6 @@
                                         <connections>
                                             <outlet property="RowTitleLabel" destination="tPZ-M6-K6L" id="b0I-QN-i5y"/>
                                             <outlet property="collectionView" destination="erF-G4-3Od" id="PgF-Nb-hGD"/>
-                                            <segue destination="fy6-yO-LSO" kind="show" id="6OP-Vd-2kJ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -667,13 +667,11 @@
                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="24" scale="large"/>
                                     </imageView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="238" id="1lV-7E-K0G"/>
+                                    <constraint firstAttribute="width" constant="39.329999999999998" id="SKO-Yn-kXU"/>
+                                </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Realease Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6v-k9-0zO">
-                                <rect key="frame" x="87" y="660" width="125.33333333333331" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwJ-me-5Dh">
                                 <rect key="frame" x="87" y="727" width="124" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -686,6 +684,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Realease Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6v-k9-0zO">
+                                <rect key="frame" x="87" y="646" width="166" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="XWs-DE-BKk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3br-np-mVT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -694,11 +701,12 @@
                             <constraint firstItem="Jph-Gl-3GL" firstAttribute="top" secondItem="bZF-TV-qlx" secondAttribute="bottom" constant="24" id="1CB-Ce-1s2"/>
                             <constraint firstItem="cbT-Y8-IkG" firstAttribute="top" secondItem="MH4-Oo-us3" secondAttribute="bottom" constant="8" id="1y4-bk-Dcy"/>
                             <constraint firstItem="3br-np-mVT" firstAttribute="trailing" secondItem="4Rm-zb-8nR" secondAttribute="trailing" constant="20" id="5V5-aq-REL"/>
-                            <constraint firstItem="v6v-k9-0zO" firstAttribute="top" secondItem="Jph-Gl-3GL" secondAttribute="bottom" constant="41" id="6hZ-X4-0gV"/>
+                            <constraint firstItem="v6v-k9-0zO" firstAttribute="top" secondItem="Jph-Gl-3GL" secondAttribute="bottom" constant="25" id="APd-2K-FyU"/>
                             <constraint firstItem="cbT-Y8-IkG" firstAttribute="leading" secondItem="3br-np-mVT" secondAttribute="leading" constant="150" id="BIE-P9-MPd"/>
                             <constraint firstItem="msd-Ng-IcL" firstAttribute="top" secondItem="MH4-Oo-us3" secondAttribute="bottom" constant="8.3300000000000001" id="Bh4-Mn-n0t"/>
                             <constraint firstItem="bZF-TV-qlx" firstAttribute="leading" secondItem="vzp-oQ-sLM" secondAttribute="trailing" constant="19.670000000000002" id="Cgf-BP-mMG"/>
                             <constraint firstItem="3br-np-mVT" firstAttribute="bottom" secondItem="xwJ-me-5Dh" secondAttribute="bottom" constant="62" id="EuN-9d-USQ"/>
+                            <constraint firstItem="xwJ-me-5Dh" firstAttribute="top" secondItem="v6v-k9-0zO" secondAttribute="bottom" constant="42" id="GQ1-pb-fob"/>
                             <constraint firstItem="vzp-oQ-sLM" firstAttribute="top" secondItem="MH4-Oo-us3" secondAttribute="bottom" constant="79" id="GRZ-MI-ooz"/>
                             <constraint firstItem="3br-np-mVT" firstAttribute="trailing" secondItem="msd-Ng-IcL" secondAttribute="trailing" constant="139" id="M5D-wp-GVq"/>
                             <constraint firstItem="bZF-TV-qlx" firstAttribute="top" secondItem="msd-Ng-IcL" secondAttribute="bottom" constant="49" id="N6P-1V-pwT"/>
@@ -706,11 +714,10 @@
                             <constraint firstItem="MH4-Oo-us3" firstAttribute="top" secondItem="4Rm-zb-8nR" secondAttribute="bottom" constant="15" id="OwU-Wu-wwu"/>
                             <constraint firstItem="Jph-Gl-3GL" firstAttribute="leading" secondItem="vzp-oQ-sLM" secondAttribute="trailing" constant="13.67" id="QzV-p7-cSb"/>
                             <constraint firstItem="MH4-Oo-us3" firstAttribute="top" secondItem="4Rm-zb-8nR" secondAttribute="bottom" constant="15" id="RGr-6x-GqV"/>
-                            <constraint firstItem="xwJ-me-5Dh" firstAttribute="top" secondItem="v6v-k9-0zO" secondAttribute="bottom" constant="43" id="SZg-4X-8ZP"/>
                             <constraint firstItem="4Rm-zb-8nR" firstAttribute="leading" secondItem="3br-np-mVT" secondAttribute="leading" constant="20" id="T9i-fG-tHU"/>
+                            <constraint firstItem="3br-np-mVT" firstAttribute="trailing" secondItem="v6v-k9-0zO" secondAttribute="trailing" constant="161" id="U5u-Qd-rOA"/>
                             <constraint firstItem="bZF-TV-qlx" firstAttribute="top" secondItem="cbT-Y8-IkG" secondAttribute="bottom" constant="49.670000000000002" id="Xkd-Nr-Ccn"/>
                             <constraint firstItem="3br-np-mVT" firstAttribute="bottom" secondItem="4Rm-zb-8nR" secondAttribute="bottom" constant="424.67000000000002" id="b3W-5B-Xl0"/>
-                            <constraint firstItem="xwJ-me-5Dh" firstAttribute="top" secondItem="v6v-k9-0zO" secondAttribute="bottom" constant="43" id="btG-CP-eR2"/>
                             <constraint firstItem="cbT-Y8-IkG" firstAttribute="top" secondItem="MH4-Oo-us3" secondAttribute="bottom" constant="8" id="c5R-q8-KwQ"/>
                             <constraint firstItem="vzp-oQ-sLM" firstAttribute="leading" secondItem="3br-np-mVT" secondAttribute="leading" constant="28" id="cpO-al-dea"/>
                             <constraint firstItem="MH4-Oo-us3" firstAttribute="leading" secondItem="3br-np-mVT" secondAttribute="leading" constant="28" id="fCZ-HB-uvz"/>
